--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Document</title>
 </head>
 <body>
+   
 <header>
     <div class="container">
         <img class="Happy Traveler" src="images/happy-traveler.svg" alt="Happy traveler">
@@ -17,7 +18,6 @@
     <h1>Happy Travels</h1>
 <main>
 
-
     <p>Specializujeme se na exotické destinace a výjimečné zážitkové pobyty. S námi se nikdy nudit nebudete. Ať už chcete zažít pořádný adrenalin nebo se jen opalovat na pláži.</p>
 
     <nav class="Odkazy">
@@ -25,7 +25,7 @@
         <a href="" class="Pláž">Raději pohodu na pláži</a>
     </nav>
     <h2>Služby naší cestovní kanceláře</h2>
-    <p>Pomůžeme vám naplánovat vaši vysněnou dovolenou. Vybereme zajímavou destinaci a zajistíme pro vás vše od ubtování až po letenky.</p>
+    <p>Pomůžeme vám naplánovat vaši vysněnou dovolenou. Vybereme zajímavou destinaci a zajistíme pro vás vše od ubytování až po letenky.</p>
 
 <div class=" button1">
    <div class="mapa"> <button> <img src="images/map-icon.svg" alt="mapa" srcset="">Naplánujeme zájezdy a výlety do celého světa.</button></div>
@@ -38,7 +38,7 @@
     <p>Naši delegáti na míste se starají o vaš pohodlí 24 hodin denně. Doporučí vám ty nejlepší výlety po okolí, zařídí pronájem slunečníku nebo auta.</p>
 
     <div class="button2">
-        <div class="palma"><button> <img src="images/palm-icon.svg" alt="palma">Doporučíme ty nejhezčí destinace pro výlety.</button></div>
+        <div class="palma"><button> <img src="images/palm-icon.svg" alt="palma">Určíme ty nejhezčí destinace pro výlety.</button></div>
         <div class="umbrella"><button><img src="images/umbrella-icon.svg" alt="slunečník">Objednáme slunečníky a plážová lehátka.</button></div>
         <div class="karavan"><button><img src="images/rv-icon.svg" alt="karavan">Pronajmeme karavan nebo vůz na cestování.</button></div>
 
@@ -46,7 +46,7 @@
 
 
 </main>
+</div>
 
-</div> 
 </body>
 </html>
