--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
     <p>Specializujeme se na exotické destinace a výjimečné zážitkové pobyty. S námi se nikdy nudit nebudete. Ať už chcete zažít pořádný adrenalin nebo se jen opalovat na pláži.</p>
 
-    <nav class="Odkazy">
-        <a href="" class="Dobrodružství">Chci dobrodružství</a>
-        <a href="" class="Pláž">Raději pohodu na pláži</a>
+    <nav class="odkazy">
+        <a href="" class="adventure">Chci dobrodružství</a>
+        <a href="" class="beach">Raději pohodu na pláži</a>
     </nav>
     <h2>Služby naší cestovní kanceláře</h2>
     <p>Pomůžeme vám naplánovat vaši vysněnou dovolenou. Vybereme zajímavou destinaci a zajistíme pro vás vše od ubytování až po letenky.</p>
@@ -46,7 +46,7 @@
 
 
 </main>
-</div>
 
+</div>
 </body>
 </html>
