--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </nav>
 
 
-<section> 
+<section class="travel agency"> 
     <h2>Služby naší cestovní kanceláře</h2>
     <p>Pomůžeme vám naplánovat vaši vysněnou dovolenou. Vybereme zajímavou destinaci a zajistíme pro vás vše od ubytování až po letenky.</p>
 
@@ -39,7 +39,7 @@
 </section>  
 
 
-<section> 
+<section class="travel guide"> 
 
     <h2>Služby našich delegátů na místě</h2>
     <p>Naši delegáti na míste se starají o vaš pohodlí 24 hodin denně. Doporučí vám ty nejlepší výlety po okolí, zařídí pronájem slunečníku nebo auta.</p>
